--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -1,8 +1,9 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  <div *ngFor="let hero of heroes" class="col-1-4">
+  <!-- #6 Problem occured as there was no closing tag for anchor. Make sure to add closing tags at relevant places-->
+  <a *ngFor="let hero of heroes" [routerLink]="['/detail', hero.id]" class="col-1-4">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
     </div>
-  </div>
+  </a>
 </div>
